# SemaforoTask-F2

./: CMakeLists.txt  README.md  SemafaroTask.c
